--- a/cv-g10-env.yml
+++ b/cv-g10-env.yml
@@ -10,3 +10,5 @@ dependencies:
     - imageio==2.37.0
     - numpy==2.2.4
     - pillow==11.1.0
+    - matplotlib==3.10.1
+    - scikit-image==0.25.2
